refactor getting started

--- a/instances/docs/getting-started/introduction.mdx
+++ b/instances/docs/getting-started/introduction.mdx
@@ -1,10 +1,10 @@
-import Figure from "../../src/components/Figure/index";
+import Figure from "@site/src/components/Figure";
 
 # Introduction
 
 Spaceflight Simulator (SFS) is a 2D, cross-platform, space flight simulation Unity game supported on Android, iOS, Windows, and macOS (through Steam) developed by Team Curiosity, and was originally an exclusively mobile game that was a solo project by Štefo Mai Morojna. In SFS, players can build and fly their own spacecraft using a variety of parts, and explore the Solar System filled with planets, moons, and other celestial bodies.
 
-![A screenshot of the spaceflight simulator banner, a rocket flying in space with the Earth and stars in the background.](../../static/img/sfsbanner.png)
+![A screenshot of the spaceflight simulator banner, a rocket flying in space with the Earth and stars in the background.](/img/sfsbanner.png)
 
 The game also has an extensive planet editing feature that allows players to create and share their own custom planets and solar systems with the community.
 
