--- a/instances/docs/getting-started/texture-modding/quickstart.mdx
+++ b/instances/docs/getting-started/texture-modding/quickstart.mdx
@@ -1,4 +1,4 @@
-import Figure from "../../../src/components/Figure/index";
+import Figure from "@site/src/components/Figure/index";
 
 # Quickstart Guide to Texture Modding
 
@@ -20,7 +20,7 @@ First, you'll need to create a mod folder where you'll store your texture files.
 
 1. Navigate to the SFS mods directory. On PC, this is usually located at:
    ```
-   C:\Users\<YourUsername>\Program Files (x86)\Steam\steamapps\common\Spaceflight Simulator\Spaceflight Simulator Game\Mods
+   C:\Program Files (x86)\Steam\steamapps\common\Spaceflight Simulator\Spaceflight Simulator Game\Mods
    ```
    On Android, it's typically found in the SFS installation directory under `Mods`.
    ```
