Document installation process for Code Mods
Added detailed instructions on installing Code Mods, including examples and visuals.

--- a/instances/docs/getting-started/installation/code-mods.mdx
+++ b/instances/docs/getting-started/installation/code-mods.mdx
@@ -1,3 +1,65 @@
+---
+sidebar_label: Installing Code Mods
+---
+
+import Figure from '@site/src/components/Figure';
+
+# What are code mods
+
+Code Mods are mods that alter the games code.  
+They are a part of authorised game mods seen here.
+
+<Figure
+  src="/gallery/JMNET_Mod_Section"
+  caption="Where code mods are"
+  alt="The Section of JMNET where code mods are"
+  widthpercent="100"
+></Figure>
+
 # Installing Code Mods
 
-TBD
+Most Code Mods would have a github.  
+Lets use Astro the Rabbit's Aero Trajectory Mod as Example
+
+<Figure
+  src="/gallery/Example_Mod_Install"
+  caption="Example Mod being used"
+  alt="The Mod we are using to show how it is installed"
+  widthpercent="100"
+></Figure>
+
+Here you can see there is a download button that downloads the latest version of that Mod but lets press on sources since some mods just give you a github page  
+
+<Figure
+  src="/gallery/Github_Code_Mod_Installing"
+  caption="How to Install"
+  alt="Press releases to install"
+  widthpercent="100"
+></Figure>
+
+Now here you should press releases  
+
+After that you should be taken to a page that looks like this
+
+<Figure
+  src="/gallery/Releases_Page"
+  caption="Releases Page"
+  alt="The Releases Page"
+  widthpercent="100"
+></Figure>
+
+Clck on the .dll to download the mod  
+Now you need to navigate to "Spaceflight Simulator Game/Mods" and put the .dll there  
+If you done everything correctly this is what it should look like
+
+<Figure
+  src="/gallery/Mods_Folder"
+  caption="Mods Folder"
+  alt="The Mods Folder"
+  widthpercent="100"
+></Figure>
+
+Now open the game and it should put the .dll in a folder and it should also appear in the Mod Loader.  
+If it does then congrates you done it correctly.  
+
+Enjoy your mods!
