Add title and description to the Installing Code Mods section

--- a/instances/docs/getting-started/installation/code-mods.mdx
+++ b/instances/docs/getting-started/installation/code-mods.mdx
@@ -1,5 +1,7 @@
 ---
 sidebar_label: Installing Code Mods
+title: Installing Code Mods
+description: A guide on how to install code mods for Spaceflight Simulator.
 ---
 
 import Figure from "@site/src/components/Figure";
